Add audit info to template in editor

--- a/src/renderer/containers/TemplateEditorModal/styles.pcss
+++ b/src/renderer/containers/TemplateEditorModal/styles.pcss
@@ -2,6 +2,12 @@
     margin-bottom: 1em;
 }
 
+.audit-info {
+    color: darkgrey;
+    font-size: smaller;
+    margin-bottom: 4px;
+}
+
 .selector {
     margin-bottom: 0;
 }
