Add spacing between table tool bar and table headers

--- a/src/renderer/containers/CustomDataTable/TableToolHeader/styles.pcss
+++ b/src/renderer/containers/CustomDataTable/TableToolHeader/styles.pcss
@@ -4,5 +4,6 @@
     border-top: var(--border);
     border-left: var(--border);
     border-right: var(--border);
+    padding-bottom: 0.5em;
     padding-left: 2em;
 }
