--- a/src/renderer/containers/Table/CustomCells/NotesCell/styles.pcss
+++ b/src/renderer/containers/Table/CustomCells/NotesCell/styles.pcss
@@ -5,6 +5,16 @@
   justify-content: center;
   width: 100%;
 }
+
+.form-icon {
+  float: right;
+}
+
+.icon-display {
+  margin: auto;
+  padding-top: 10px;
+  width: 100%;
+}
   
 .use-full-width {
   width: 100%;
