Fix css loading

--- a/src/renderer/components/StatusBar/styles.pcss
+++ b/src/renderer/components/StatusBar/styles.pcss
@@ -13,12 +13,10 @@
   justify-content: flex-start;
   margin-right: 2em;
   composes: ellipsis from "../../styles/variables.pcss";
+}
 
-  &:hover {
-    & .copy {
-      opacity: 1;
-    }
-  }
+.status-container:hover .copy {
+  opacity: 1;
 }
 
 .status {
