--- a/src/renderer/containers/CustomDataTable/TableFooter/styles.pcss
+++ b/src/renderer/containers/CustomDataTable/TableFooter/styles.pcss
@@ -5,11 +5,11 @@
     border-right: var(--border);
     text-align: center;
     width: 100%;
-  
-    & button {
-      border: none;
-      /* Variable located in styles/colors */
-      color: var(--brand-primary);
-      font-size: inherit;
-    }
-  }
+}
+
+.table-footer button {
+  border: none;
+  /* Variable located in styles/colors */
+  color: var(--brand-primary);
+  font-size: inherit;
+}
