--- a/src/renderer/containers/LookupSearch/styles.pcss
+++ b/src/renderer/containers/LookupSearch/styles.pcss
@@ -6,10 +6,8 @@
     margin: 0;
 }
 
-.search {
-    & :global(.ant-select-arrow) {
-        top: 30%;
-        color: black;
-        font-size: 1.25em;
-    }
+.search :global(.ant-select-arrow) {
+    top: 30%;
+    color: black;
+    font-size: 1.25em;
 }
