--- a/src/renderer/containers/NavigationBar/styles.pcss
+++ b/src/renderer/containers/NavigationBar/styles.pcss
@@ -19,15 +19,15 @@
     padding-top: 5px;
     /* Width is the width of the entire bar minus the left and right padding */
     width: calc(var(--navigation-bar-width) - 2 * var(--bar-right-and-left-padding));
+}
 
-    & .button-icon {
-        font-size: 30px;
-    }
+.button .button-icon {
+    font-size: 30px;
+}
 
-    & .button-title {
-        line-height: 1.1em;
-        white-space: normal;
-    }
+.button .button-title {
+    line-height: 1.1em;
+    white-space: normal;
 }
 
 .button:hover {
