--- a/src/renderer/containers/SettingsModal/styles.pcss
+++ b/src/renderer/containers/SettingsModal/styles.pcss
@@ -36,10 +36,10 @@
 .setting-label {
   display: flex;
   align-items: center;
+}
 
-  & .icon {
-    margin-right: 10px;
-  }
+.setting-label .icon {
+  margin-right: 10px;
 }
 
 .toggle {
