--- a/src/renderer/containers/TutorialTooltip/styles.pcss
+++ b/src/renderer/containers/TutorialTooltip/styles.pcss
@@ -1,11 +1,9 @@
-.content-container {
-    & h4, & p {
-        color: #ffffff;
-    }
+.content-container h4, .content-container p {
+    color: #ffffff;
+}
 
-    & h4 {
-        font-weight: bold;
-    }
+.content-container h4 {
+    font-weight: bold;
 }
 
 .popover {
@@ -28,18 +26,18 @@
     background: none !important;
     color: #ffffff;
     padding: 0;
+}
 
-    & span {
-        text-decoration: underline;
-    }
+.footer-button span {
+    text-decoration: underline;
 }
 
 .footer-button:hover {
     border: none;
     background: none;
     color: #ffffff;
+}
 
-    & span {
-        text-decoration: none;
-    }
+.footer-button:hover span {
+    text-decoration: none;
 }
