--- a/src/renderer/components/DragAndDrop/styles.pcss
+++ b/src/renderer/components/DragAndDrop/styles.pcss
@@ -25,27 +25,26 @@
 .container {
   width: 100%;
   height: 100%;
-
-  & .content {
-    width: 50%;
-
-    & .upload-icon {
-      font-size: 5em;
-      color: var(--brand-primary);
-      padding: 1rem;
-    }
-  }
-
-  & .overlay {
-    pointer-events: none;
-    opacity: 0.25;
-    width: 100%;
-    height: 100%;
-  }
-
-  & .overlay-prompt {
-    position: absolute;
-    padding-left: 45px;
-  }
 }
 
+.container .content {
+  width: 50%;
+}
+
+.container .content .upload-icon {
+  font-size: 5em;
+  color: var(--brand-primary);
+  padding: 1rem;
+}
+
+.container .overlay {
+  pointer-events: none;
+  opacity: 0.25;
+  width: 100%;
+  height: 100%;
+}
+
+.container .overlay-prompt {
+  position: absolute;
+  padding-left: 45px;
+}
