--- a/src/renderer/components/FormControl/styles.pcss
+++ b/src/renderer/components/FormControl/styles.pcss
@@ -6,23 +6,23 @@
   display: flex;
   align-items: center;
   height: 100%;
+}
 
-  & .form {
-    flex: 1;
-    min-height: inherit;
-    display: flex;
-    align-items: center;
-  }
+.body .form {
+  flex: 1;
+  min-height: inherit;
+  display: flex;
+  align-items: center;
 }
 
 .error {
   color: var(--error);
+}
 
-  & .error-icon {
-    flex: 0 0 auto;
-    color: var(--error);
-    margin: 0 0.5em;
-    display: flex;
-    align-items: center;
-  }
+.error .error-icon {
+  flex: 0 0 auto;
+  color: var(--error);
+  margin: 0 0.5em;
+  display: flex;
+  align-items: center;
 }
