--- a/src/renderer/components/TemplateSearch/styles.pcss
+++ b/src/renderer/components/TemplateSearch/styles.pcss
@@ -11,20 +11,20 @@
     width: 100%;
     align-items: center;
     padding: 0.5em 1em;
+}
 
-    &:hover {
-        cursor: pointer;
-        color: var(--brand-primary);
-    }
+.create-template:hover {
+    cursor: pointer;
+    color: var(--brand-primary);
+}
 
-    & .icon {
-        flex: 0 0 auto;
-    }
+.create-template .icon {
+    flex: 0 0 auto;
+}
 
-    & .text {
-        flex: 1;
-        margin-left: 1em;
-    }
+.create-template .text {
+    flex: 1;
+    margin-left: 1em;
 }
 
 .form {
