--- a/src/renderer/containers/UploadWithTemplatePage/PageFooter/styles.pcss
+++ b/src/renderer/containers/UploadWithTemplatePage/PageFooter/styles.pcss
@@ -1,10 +1,16 @@
 .page-footer {
     display: flex;
+    align-items: center; 
     justify-content: center;
     margin-bottom: 10px;
 }
-  
+
 .cancel-button {
     margin-right: 10px;
 }
-  
+
+.checkbox-container {
+    display: flex;
+    align-items: center; 
+    margin-left: 20px; 
+}
