[FUA-98] Add (unstyled) radio button group for selecting between file / multifile upload types

--- a/src/renderer/containers/UploadSelectionPage/styles.pcss
+++ b/src/renderer/containers/UploadSelectionPage/styles.pcss
@@ -53,3 +53,10 @@
 .selector {
   width: 100%;
 }
+
+
+.new-content-container {
+  display: block;
+  max-width: calc(100% - var(--navigation-bar-width));
+  width: 100vw;
+}
