[FUA-98] Add list of selected files below DragAndDrop zone

--- a/src/renderer/containers/UploadSelectionPage/styles.pcss
+++ b/src/renderer/containers/UploadSelectionPage/styles.pcss
@@ -58,5 +58,6 @@
 .new-content-container {
   display: block;
   max-width: calc(100% - var(--navigation-bar-width));
+  overflow: scroll;
   width: 100vw;
 }
