--- a/src/renderer/containers/App/styles.pcss
+++ b/src/renderer/containers/App/styles.pcss
@@ -13,7 +13,7 @@
 :global(html), :global(body), :global(main), :global(#app) {
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 :global(.rdg-editor-container) {
@@ -30,7 +30,7 @@
   flex-direction: column;
   font-size: 14px;
   font-family: 'Nunito', sans-serif;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 .main-content {
@@ -47,6 +47,6 @@
 :global(.ant-message-custom-content) {
   line-height: 24px;
   max-height: calc(24px * 5);
-  overflow: hidden;
+  overflow: scroll;
 }
 
