[FUA-98] Add SelectionPage footer

--- a/src/renderer/containers/UploadSelectionPage/styles.pcss
+++ b/src/renderer/containers/UploadSelectionPage/styles.pcss
@@ -59,5 +59,6 @@
   display: block;
   max-width: calc(100% - var(--navigation-bar-width));
   overflow: scroll;
+  position: relative;
   width: 100vw;
 }
