--- a/src/renderer/components/StatusBar/styles.pcss
+++ b/src/renderer/components/StatusBar/styles.pcss
@@ -1,6 +1,8 @@
 .container {
+  bottom: 0;
   display: flex;
   padding: 0.25em 1em;
+  position: absolute;
   font-size: var(--small);
   align-items: center;
   justify-content: space-between;
