[FUA-98] Turn <PageFooter> into a wrapper

--- a/src/renderer/containers/UploadSelectionPage/styles.pcss
+++ b/src/renderer/containers/UploadSelectionPage/styles.pcss
@@ -32,6 +32,11 @@
   flex-direction: column;
 }
 
+.footer-button {
+    margin-right: 15px;
+    width: 200px;
+}
+
 .spin-container {
   height: 100%;
   width: 100%;
