[FUA-98] More button bar / footer styling

--- a/src/renderer/components/PageFooter/styles.pcss
+++ b/src/renderer/components/PageFooter/styles.pcss
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     right: 0;
+    height: var(--page-footer-height);
     max-width: calc(100% - var(--navigation-bar-width));
     padding-bottom: 15px;
     padding-top: 15px;
