--- a/src/renderer/styles/variables.pcss
+++ b/src/renderer/styles/variables.pcss
@@ -4,6 +4,7 @@
   --tab-pane-padding: 9px;
   --hidden-border-width: 10px;
   --navigation-bar-width: calc(60px + 0.5em);
+  --page-footer-height: 65px;
 }
 
 .ellipsis {
