--- a/src/renderer/containers/AddMetadataPage/styles.pcss
+++ b/src/renderer/containers/AddMetadataPage/styles.pcss
@@ -9,11 +9,13 @@
   display: flex;
   flex-direction: column;
 
-  height: 100%;
+  height: calc(95% - var(--page-footer-height));
   overflow-y: auto;
   overflow-x: hidden;
   max-width: calc(100% - var(--navigation-bar-width));
-  padding: 1em;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-top: 30px;
   user-select: auto;
   width: 100vw;
 }
