[FUA-98] Style "Upload Type" radio button

--- a/src/renderer/containers/UploadSelectionPage/UploadTypeSelector/styles.pcss
+++ b/src/renderer/containers/UploadSelectionPage/UploadTypeSelector/styles.pcss
@@ -1,3 +1,33 @@
+.radio-button {
+  align-items: center;
+  display: flex;
+  font-size: 12pt;
+  line-height: normal;
+  height: auto;
+  padding: 5px 15px 5px 15px;
+  width: 50%;
+}
+
+.radio-button-content {
+  align-items: center;
+  display: flex;
+  gap: 10px;
+  height: auto;
+  justify-content: flex-start;
+}
+
+.radio-button-icon {
+  font-size: 1.2em;
+}
+
+.radio-button-help-text {
+  font-size: 0.8em;
+}
+
+.radio-button-text {
+}
+
 .radio-group {
-  display: block;
+  display: flex;
+  justify-content: center;
 }
