[FUA-98] Clean up styling on UploadSelectionPage

--- a/src/renderer/containers/UploadSelectionPage/DragAndDropPrompt/styles.pcss
+++ b/src/renderer/containers/UploadSelectionPage/DragAndDropPrompt/styles.pcss
@@ -3,20 +3,18 @@
   color: black;
   display: flex;
   flex-direction: column;
-  padding: 1rem;
-  width: 60%;
-}
-
-.content .upload-icon {
-  font-size: 5em;
-  color: inherit;
-  padding: 1rem;
+  margin-bottom: 20px;
+  margin-top: 25px;
+  padding-top: 20px;
+  width: 100%;
 }
 
 .drop-zone {
   border: 2px dashed black;
   border-color: var(--grey);
   border-radius: 25px;
+
+  font-size: 18px;
 
   padding-bottom: 80px;
   padding-top: 80px;
@@ -40,11 +38,10 @@
 }
 
 .drop-zone-help-text {
-  color: #3d3d3d;
-  font-size: 10px;
+  font-size: 0.6em;
 }
 
-.header {
-    text-align: left;
-    width: 100%;
+.upload-icon {
+  font-size: 4em;
+  color: inherit;
 }
