--- a/src/renderer/containers/UploadSelectionPage/SelectedFilesList/styles.pcss
+++ b/src/renderer/containers/UploadSelectionPage/SelectedFilesList/styles.pcss
@@ -2,16 +2,17 @@
     background-color: #F5F5F5;
     border: 1px solid black;    
     border-radius: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 16px;
-    width: 60%;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    padding: 12px;
+    width: 100%;
 }
 
 .table {
     background-color: white;
     border: 1px solid black;
     border-collapse: collapse;
+    width: 100%;
 }
 
 .table-cell {
