--- a/src/renderer/containers/UploadSelectionPage/UploadTypeSelector/styles.pcss
+++ b/src/renderer/containers/UploadSelectionPage/UploadTypeSelector/styles.pcss
@@ -1,16 +1,16 @@
 .radio-button {
   align-items: center;
   display: flex;
-  font-size: 12pt;
   line-height: normal;
   height: auto;
-  padding: 5px 15px 5px 15px;
+  padding: 10px 18px 10px 18px;
   width: 50%;
 }
 
 .radio-button-content {
   align-items: center;
   display: flex;
+  font-size: 18px;
   gap: 10px;
   height: auto;
   justify-content: flex-start;
@@ -21,7 +21,7 @@
 }
 
 .radio-button-help-text {
-  font-size: 0.8em;
+  font-size: 0.75em;
 }
 
 .radio-button-text {
