--- a/src/renderer/containers/UploadSelectionPage/styles.pcss
+++ b/src/renderer/containers/UploadSelectionPage/styles.pcss
@@ -1,34 +1,17 @@
-.error-icon {
-  color: var(--error);
+h1 {
+  font-size: 26px;
+  text-align: left;
+  width: 100%;
 }
 
-.icon {
-  padding-top: 5px;
-  padding-right: 8px;
-}
-
-.alert {
-  margin-bottom: 1em;
-  max-height: 10em;
-  overflow-y: auto;
-}
-
-.content-container {
-  display: flex;
-  flex-direction: column;
-
-  height: calc(100% - var(--page-footer-height));
-  overflow-y: auto;
-  overflow-x: hidden;
-  max-width: calc(100% - var(--navigation-bar-width));
-  padding: 1em;
-  user-select: auto;
-  width: 100vw;
-}
-
-.drag-and-drop-box {
-  display: flex;
-  flex-direction: column;
+.content {
+  width: 100%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 40px;
 }
 
 .footer-button {
@@ -36,30 +19,7 @@
     width: 200px;
 }
 
-.spin-container {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.help-text {
-  color: lightgrey;
-}
-
-.separator-text {
-  padding-top: 24px;
-  margin: 0 10px;
-}
-
-.selector {
-  width: 100%;
-}
-
-
-.new-content-container {
+.page {
   display: block;
   margin-bottom: 100px;
   max-width: calc(100% - var(--navigation-bar-width));
