--- a/src/renderer/containers/MyUploadsPage/styles.pcss
+++ b/src/renderer/containers/MyUploadsPage/styles.pcss
@@ -1,11 +1,11 @@
 .drag-and-drop-box {
     height: 100%;
-    margin: 1em;
     overflow: hidden;
     width: 100%;
 }
 
 .container {
+    padding: 15px;
     position: relative;
     height: 100%;
     overflow: hidden;
