[FUA-141] Change overflow to "auto" instead of "scroll" in multiple places

--- a/src/renderer/containers/UploadSelectionPage/styles.pcss
+++ b/src/renderer/containers/UploadSelectionPage/styles.pcss
@@ -23,7 +23,7 @@ h1 {
   display: block;
   margin-bottom: 100px;
   max-width: calc(100% - var(--navigation-bar-width));
-  overflow: scroll;
+  overflow: auto;
   position: relative;
   width: 100vw;
 }
