--- a/src/renderer/containers/UploadSelectionPage/DragAndDropPrompt/styles.pcss
+++ b/src/renderer/containers/UploadSelectionPage/DragAndDropPrompt/styles.pcss
@@ -11,13 +11,13 @@
 
 .drop-zone {
   border: 2px dashed black;
-  border-color: var(--grey);
+  border-color: #595959;
   border-radius: 25px;
 
   font-size: 18px;
 
-  padding-bottom: 80px;
-  padding-top: 80px;
+  padding-bottom: 70px;
+  padding-top: 70px;
 
   text-align: center;
   width: 100%;
@@ -26,7 +26,7 @@
   transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
-.drop-zone:hover {
+.drop-zone:hover, .drop-zone:hover .drop-zone-help-text {
     border-color: var(--brand-primary);
     color: var(--brand-primary);
     cursor: pointer;
@@ -38,7 +38,9 @@
 }
 
 .drop-zone-help-text {
-  font-size: 0.6em;
+  color: #595959;
+  font-size: 0.8em;
+  transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
 .upload-icon {
