[FUA-154] Only display base file name instead of full file paths

--- a/src/renderer/containers/UploadSelectionPage/SelectedFilesList/styles.pcss
+++ b/src/renderer/containers/UploadSelectionPage/SelectedFilesList/styles.pcss
@@ -33,6 +33,7 @@
     background-color: #F5F5F5;
     border-bottom: #CBCBCB;
     border-radius: 10px 10px 0px 0px;
+    color: #575859;
     font-size: 0.9em;
     padding-bottom: 12px;
     padding-left: 32px;
