[FUA-155] Add new "Add More Files to Template" button;

--- a/src/renderer/containers/AddMetadataPage/styles.pcss
+++ b/src/renderer/containers/AddMetadataPage/styles.pcss
@@ -32,3 +32,17 @@
   justify-content: center;
   flex-direction: column;
 }
+
+.return-button {
+  border: 1px solid white; /* should blend in with background */
+  box-shadow: none;
+  color: var(--brand-primary);
+
+  /* copied from antd button */
+  transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+.return-button:hover {
+  border: 1px solid #3db389;
+  color: #3db389;
+}
