[FUA-155] Fix page formatting

--- a/src/renderer/containers/AddMetadataPage/styles.pcss
+++ b/src/renderer/containers/AddMetadataPage/styles.pcss
@@ -4,7 +4,7 @@
   overflow-y: auto;
 }
 
-.content-container {
+.table-container {
   /* Flex-parent of data table */
   display: flex;
   flex-direction: column;
@@ -38,6 +38,14 @@
   box-shadow: none;
   color: var(--brand-primary);
 
+  display: flex;
+  align-items: center;
+
+  margin-left: 20px;
+  margin-top: 20px;
+  padding-bottom: 5px;
+  padding-top: 5px;
+
   /* copied from antd button */
   transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
@@ -45,4 +53,10 @@
 .return-button:hover {
   border: 1px solid #3db389;
   color: #3db389;
+}
+
+.return-button-icon {
+  font-size: 1.2em;
+  margin-right: 8px;
+  padding-top: 4px;
 }
