[FUA-154] Fix header bottom border; "Items" -> "Item(s)"

--- a/src/renderer/containers/UploadSelectionPage/SelectedFilesList/styles.pcss
+++ b/src/renderer/containers/UploadSelectionPage/SelectedFilesList/styles.pcss
@@ -31,7 +31,7 @@
 
 .table-header {
     background-color: #F5F5F5;
-    border-bottom: #CBCBCB;
+    border-bottom: 1px solid #CBCBCB;
     border-radius: 10px 10px 0px 0px;
     color: #575859;
     font-size: 0.9em;
