Adjust styling on "AddMetadataPage" to be a bit more in line with "UploadSelectionPage"

--- a/src/renderer/containers/AddMetadataPage/styles.pcss
+++ b/src/renderer/containers/AddMetadataPage/styles.pcss
@@ -4,6 +4,14 @@
   overflow-y: auto;
 }
 
+.dropdown {
+  margin-bottom: 1em;
+}
+
+.page {
+  margin-bottom: 75px;
+}
+
 .table-container {
   /* Flex-parent of data table */
   display: flex;
