--- a/src/renderer/containers/Table/styles.pcss
+++ b/src/renderer/containers/Table/styles.pcss
@@ -12,6 +12,7 @@
 .table-container {
     background-color: var(--app-foreground-color);
     /* Variable located in styles/variables */
+    border-bottom: var(--border);
     border-left: var(--border);
     border-right: var(--border);
     display: flex;
