--- a/src/renderer/containers/Table/DefaultCells/DisplayCell/styles.pcss
+++ b/src/renderer/containers/Table/DefaultCells/DisplayCell/styles.pcss
@@ -56,3 +56,14 @@
     height: 100%;
     width: 100%;
 }
+
+.autofilled {
+    background-color: #f0f0f0;
+    color: #888;
+    cursor: not-allowed;
+}
+
+.autofilled:focus {
+    border: none;
+    border-color: transparent;
+}
